Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1580

Connection negotiation timeout to tablet server is treated as unretriable error on write operations

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 0.10.0
    • 1.4.0
    • client

    Description

      In the case that the leader tablet server is up but "frozen", the client will get a connection negotiation timeout trying to establish an RPC connection. It appears that this Status::TimeOut() is treated as a non-retriable error by WriteRpc::AnalyzeResponse, so the client gets a failure even if there has been a leader re-election within the client-provided deadline.

      Attachments

        Issue Links

          Activity

            People

              aserbin Alexey Serbin
              tlipcon Todd Lipcon
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: