Workaround KUDU-1580: bump negotiation timeout to 15sec

KUDU-1580 is a bug where RPC negotiation timeouts aren't considered
retriable errors. We see this cause issues on test clusters
occasionally.

Because fixing the bug is a bit trickier, let's bump the timeout for
1.1, and then drop it back down once the bug is addressed.

Change-Id: I98b246639882b2ea107648562a383f6b40b35390
Reviewed-on: http://gerrit.cloudera.org:8080/4977
Reviewed-by: Adar Dembo <adar@cloudera.com>
Tested-by: Kudu Jenkins
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>